2A/05_Projet_GL/src/test/deca/context/invalid/complet/47_casting_bool_int.deca
// Description :
//   casting : boolean --> int 
// Resultats :
//    ligne 9 :  casting entre 'int' et 'boolean' n'est pas possible
// Historique :
//  cree le 16/01/2024

{
    (int)(true);

}